--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aiogram>=3.21.0",
+    "cohere>=5.17.0",
     "qdrant-client>=1.15.1",
 ]
