--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "aiogram>=3.21.0",
     "cohere>=5.17.0",
+    "genson>=1.3.0",
     "qdrant-client>=1.15.1",
 ]
